Consertado erros no texto como sugerido por Julio

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@ title: Home
 				centrais para discussão: Educação 4.0 e LGPD.
 			</p>
 			<p class="text-justify">
-				Em Educação 4.0 dialogaremos sobre o papel da “nova escola”
+				Em Educação 4.0, dialogaremos sobre o papel da “nova escola”
 				na formação de profissionais para as novas profissões advindas
-				com a 4a Revolução Industrial.
+				com a 4ª Revolução Industrial.
 			</p>
 			<p class="text-justify">
 				Já com relação à Lei Geral de Proteção de Dados (LGPD),
@@ -78,11 +78,11 @@ title: Home
 				Confira nossa programação e faça sua inscrição aqui no site.
 			</p>
 			<p class="text-justify">
-				O evento é gratuito e aberto a toda comunidade. Venham
+				O evento é gratuito e aberto a toda a comunidade. Venham
 				participar com a gente!
 			</p>
 			<p class="text-justify">
-				Informamos que, para receber um certificado de participação no
+				Informamos que, para receber o certificado de participação no
 				evento, o participante deve cadastrar seus dados no site e
 				assinar lista de presença nas atividades.
 			</p>
