(2/3) Imagem principal atualizada

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 ---
 <div class="jumbotron" id="hero">
 	<div class="container">
-		<img src="{{ site.baseurl }}/assets/img/logo.svg" alt="Logo Arduino Day 2020" class="img-fluid">
+		<img src="{{ site.baseurl }}/assets/img/logo2020.svg" alt="Logo Arduino Day 2020" class="img-fluid">
 		<div class="div-text-home">
 			<h1 class="display-4">Unindo pessoas e projetos</h1>
 			<p class="lead">Está chegando o Arduino Day 2020. Venha compartilhar ideias com a gente!</p>
