--- a/inscricao.html
+++ b/inscricao.html
@@ -6,7 +6,7 @@ description: Para a garantir a participação no Arduino Day, é importante se i
 <main class="bg-componentes">
 	<div class="container-fluid bg-info text-light py-5">
 		<div class="container">
-			<h1>Inscrições</h1>
+			<h1>Credenciamento</h1>
 			<p>Venha participar conosco!</p>
 		</div>
 	</div>
