--- a/minicursos.html
+++ b/minicursos.html
@@ -1,36 +1,34 @@
 ---
 layout: default
-title: Atividades
+title: Minicursos
 description: Para a garantir a participação no Arduino Day, é importante se inscrever.
 ---
 <main class="bg-componentes">
     <div class="container-fluid bg-info text-light py-5">
         <div class="container">
-            <h1>Atividades</h1>
+            <h1>Minicursos</h1>
             <p>Venha participar conosco!</p>
         </div>
     </div>
     <div class="container py-5 text-justify">
-        {% for activity in site.data.activities %}
+        {% for minicurso in site.data.minicursos %}
 
         <div class="card mb-3">
             <div class="card-header">
-                {{ activity.titulo }}
+                {{ minicurso.titulo }}
             </div>
             <div class="card-body">
-                <p class="card-text">{{ activity.resumo }}</p>
+                <p class="card-text">{{ minicurso.resumo }}</p>
                 <p class="card-text">
-                    Autor(es):
+                    Instrutores(es):
                     <ul>
-                        {% for autor in activity.autores %}
-                        <li>{{ autor }}</li>
+                        {% for instrutor in minicurso.instrutores %}
+                        <li>{{ instrutor }}</li>
                         {% endfor %}
                     </ul>
                 </p>
-                <p class="card-text">Orientador: {{ activity.orientador }}</p>
-                <p>{{ activity.descricao }}</p>
-                <p class="card-text"><small class="text-muted">{{ activity.eixo }}</small></p>
-                <div><span class="badge badge-pill badge-info">{{ activity.tipo }}</span></div>
+                <p>{{ minicurso.descricao }}</p>
+                <p class="card-text"><small class="text-muted">{{ minicurso.observacao }}</small></p>
             </div>
         </div>
 
