--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@ title: Home
 		<img src="{{ site.baseurl }}/assets/img/logo2020.svg" alt="Logo Arduino Day 2020" class="img-fluid">
 		<div class="div-text-home">
 			<h1 class="display-4">Unindo pessoas e projetos</h1>
-			<p class="lead">Está chegando o Arduino Day 2020. Venha compartilhar ideias com a gente!</p>
-			<p class="lead py-2">20 e 21 de março <span class="badge badge-pill text-light bg-info1">Save the
-					Date!</span></p>
+			<p class="lead">Venha compartilhar ideias com a gente!</p>
+			<div class="py-2">
+				<a class="h3" href="/posts/comunicados-arduino-day-2020/" title="Comunicados Arduino Day 2020">
+				<div class="badge badge-danger" style="white-space: normal">Comunicado Coronavírus (COVID-19)</div>
+				</a>
+			</div>
 		</div>
 	</div>
 </div>
